--- a/exercises/day1part2_exercises_no_answers.Rmd
+++ b/exercises/day1part2_exercises_no_answers.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Exercises Day 2"
-author: "Richard Paquin Morel, adapted from exercises by Christina Maimone"
+title: "Answers to Exercises Day 1"
+author: "Aditya Gudal, adapted from exercises by Christina Maimone"
 date: "`r Sys.Date()`"
 output: html_document
 params:
-    answers: FALSE
+    answers: TRUE
 ---
 
 
@@ -22,12 +22,9 @@ knitr::opts_chunk$set(echo=answers, eval=answers,
 
 Load the `gapminder` dataset.
 
-```{asis}
-### Answer
-```
-
-```{r}
+```{r 1,echo=T,include=T}
 gapminder <- read.csv(here::here("data/gapminder5.csv"), stringsAsFactors=FALSE)
+str(gapminder)
 ```
 
 
@@ -37,18 +34,15 @@ Use an if() statement to print a suitable message reporting whether there are an
 
 Hint: use the `any` function.
 
-```{asis}
-### Answer
-```
-
-```{r}
+```{r 2,echo=T,include=T}
 year<-2002
-if(any(gapminder$year == year)){
-   print(paste("Record(s) for the year",year,"found."))
-} else {
-  print(paste("No records for year",year))
+if(any(gapminder$year==year)){
+  print('yes')
+}else{
+ print('no') 
 }
 ```
+
 
 
 ## Loop and If Statements
@@ -57,83 +51,63 @@ Write a script that finds the mean life expectancy by country for countries whos
 
 Write a script that loops through the `gapminder` data by continent and prints out whether the mean life expectancy is smaller than 50, between 50 and 70, or greater than 70.
 
-```{asis}
-### Answer
-```
-
-```{r}
-overall_mean <- mean(gapminder$pop)
-
-for (i in unique(gapminder$country)) {
-   country_mean <- mean(gapminder$pop[gapminder$country==i])
-   
-   if (country_mean < overall_mean) {
-     mean_le <- mean(gapminder$lifeExp[gapminder$country==i])
-     print(paste("Mean Life Expectancy in", i, "is", mean_le))
-   } 
-} # end for loop
-```
-
-```{r}
-lower_threshold <- 50
-upper_threshold <- 70
- 
-for (i in unique(gapminder$continent)){
-    tmp <- mean(gapminder$lifeExp[gapminder$continent==i])
-    
-    if (tmp < lower_threshold){
-        print(paste("Average Life Expectancy in", i, "is less than", lower_threshold))
-    }
-    else if (tmp > lower_threshold & tmp < upper_threshold){
-        print(paste("Average Life Expectancy in", i, "is between", lower_threshold, "and", upper_threshold))
-    }
-    else {
-        print(paste("Average Life Expectancy in", i, "is greater than", upper_threshold))
-    }
-   
+```{r ans1,echo=T,include=T}
+pop_mean<-mean(gapminder$pop)
+for(i in unique(gapminder$country)){
+  country_mean<-mean(gapminder$pop[gapminder$country==i])
+  
+  if(country_mean<pop_mean){
+    print(paste('the mean life expectancy of ',i,'is',mean(gapminder$lifeExp[gapminder$country==i])))
+  }
 }
 ```
 
+```{r ans2,echo=T}
+l_thresh<-50
+h_thresh<-70
 
+for (continent in unique(gapminder$continent)){
+  meanlifeExp<-mean(gapminder$lifeExp[gapminder$continent==continent])
+  
+  if (meanlifeExp<l_thresh){
+    print(paste(continent,'has low life Expectancy'))
+  }
+  else if(meanlifeExp  %in% c(l_thresh,h_thresh)){
+    print(paste(continent,'has medium life expectancy'))
+  }
+  else{
+    print(paste(continent,'has high life expectancy'))
+  }
+}
+```
 ## Exercise: Write Functions
 
 Create a function that given a data frame will print the name of each column and the class of data it contains. Use the gapminder dataset.  Hint: Use `mode()` or `class()` to get the class of the data in each column. Remember that `names()` or `colnames()` returns the name of the columns in a dataset.
 
-```{asis}
-### Answer
-
-Note: Some of these were taken or modified from https://www.r-bloggers.com/functions-exercises/
-```
-
-```{r}
-data_frame_info <- function(df) {
-  cols <- names(df)
+```{r creating func,echo=T}
+name_and_type<- function(data) {
+  cols <- names(data)
   for (i in cols) {
-    print(paste0(i, ": ", mode(df[, i])))
-  }
+    print(paste0(i, ": ", class(data[, i])))
+    }
 }
-data_frame_info(gapminder)
-```
+name_and_type(gapminder)
 
+#Note: Some of these were taken or modified from #https://www.r-bloggers.com/functions-exercises/
+```
 Create a function that given a vector will print the mean and the standard deviation of a **vector**, it will optionally also print the median. Hint: include an argument that takes a boolean (`TRUE`/`FALSE`) operator and then include an `if` statement.
 
-```{asis}
-### Answer
-
-```
-
-```{r}
-vector_info <- function(x, include_median=FALSE) {
-  print(paste("Mean:", mean(x)))
-  print(paste("Standard Deviation:", sd(x)))
-  if (include_median) {
-    print(paste("Median:", median(x)))
+```{r creating function,include=T,echo=T}
+vector_given<-function(x,include_median=F){
+  print(paste('Mean : ',mean(x)))
+  print(paste('Standard Deviation : ',sd(x)))
+  if(include_median){
+    print(paste('Median : ',median(x)))
   }
 }
 
-le <- gapminder$lifeExp
-vector_info(le, include_median = F)
-vector_info(le, include_median = T)
+vector_given(gapminder$year,T)
+
 ```
 
 ## Analyzing the relationship 
@@ -141,5 +115,35 @@ vector_info(le, include_median = T)
 Use what you've learned so far to answer the following questions using the `gapminder` dataset. Be sure to include some visualizations!
 
 1. What is the relationship between GDP per capita and life expectancy? Does this relationship change over time? (Hint: Use the natural log of both variables.)
+```{r ques1,include=T,echo=T}
+years<-unique(gapminder$year)
+
+data_1<-data.frame(x=years,y=sapply(years,function(x) cor(log(gapminder$gdpPercap[x==gapminder$year]),log(gapminder$lifeExp[x==gapminder$year]))))
+
+fit <- lm(data_1$y ~data_1$x)
+
+summary(fit)
+```
+
+
+```{r ques1 plot,echo=T}
+plot(data_1$y ~ data_1$x, main ='Relationship between GDP per capita and Life Expectancy per year',xlab='Year',ylab='Correlated Relationship')
+lines(loess.smooth(data_1$x, data_1$y,col='red',degree=10))
+
+
+
+```
+
+
 
 2. Does the relationship between GDP per capita and life expectacy vary by continent? Make sure you divide the Americas into North and South America.
+
+```{r ques2 relationship,echo=T}
+gapminder$continent[gapminder$continent=='Americas']<-ifelse(gapminder$country%in%c('Canada','Costa Rica','Cuba','Dominican Republic','El Salvador','Guatemala','Haiti','Honduras','Jamaica','Mexico','Nicaragua','Panama','Puerto Rico','Trinidad and Tobago','United States'),'North America','South America')
+
+unique_continents<-unique(gapminder$continent)
+
+data_2<-data.frame(y=sapply(unique_continents,function(x) cor(log(gapminder$gdpPercap[x==gapminder$continent]),log(gapminder$lifeExp[x==gapminder$continent]))))
+
+data_2
+```
